--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css" />
     <script type="module">
-      import RovingTabIndex from "./rovingtabindex.js";
+      import RovingTabIndex from "./roving-tabindex.js";
     </script>
   </head>
 
@@ -99,13 +99,13 @@
 
       <p>
         <code>&lt;roving-tabindex&gt;</code> isn't on NPM; instead, you install it by downloading
-        <a target="_blank" href="./rovingtabindex.js"><code>roving-tabindex.js</code></a>
+        <a target="_blank" href="./roving-tabindex.js"><code>roving-tabindex.js</code></a>
         and adding it to your codebase. The default export is a class with a static
         <code>define</code> method:
       </p>
 
       <pre class="codeblock"><code>&lt;script type="module"&gt;
-  import RovingTabindex from "/rovingtabindex.js";
+  import RovingTabindex from "/roving-tabindex.js";
   RovingTabIndex.define();
 &lt;script/&gt;</code></pre>
 
@@ -115,7 +115,7 @@
       </p>
 
       <pre class="codeblock"><code>&lt;script type="module"&gt;
-  import RovingTabindex from "/rovingtabindex.js";
+  import RovingTabindex from "/roving-tabindex.js";
   RovingTabIndex.define("other-tagname");
 &lt;script/&gt;</code></pre>
 
