--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
     <test-suite sync data-testid="suite">
       <test-block name="keyboard navigation" sync>
         <script type="sandbox:module">
-          import RovingTabindex from "../rovingtabindex.js";
+          import RovingTabindex from "../roving-tabindex.js";
         </script>
         <roving-tabindex selector="button">
           <button id="one">one</button>
