--- a/test/test.html
+++ b/test/test.html
@@ -72,7 +72,7 @@
       </test-block>
       <test-block name="dom mutations" sync>
         <script type="sandbox:module">
-          import RovingTabindex from "../rovingtabindex-0.3.0.js";
+          import RovingTabindex from "../rovingtabindex.js";
         </script>
         <roving-tabindex selector="button">
           <button id="one">one</button>
