--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
       <pre
         class="codeblock"
-      ><code>&lt;roving-tabindex selector="button, a" direction="horziontal"&gt;
+      ><code>&lt;roving-tabindex selector="button, a" direction="horizontal"&gt;
     &lt;ul class="menu" role="toolbar" aria-label="toolbar-example"&gt;
         &lt;li&gt;&lt;button&gt;One&lt;/button&gt;&lt;/li&gt;
         &lt;li&gt;&lt;button&gt;Two&lt;/button&gt;&lt;/li&gt;
@@ -171,7 +171,7 @@
         <summary>Source</summary>
         <pre
           class="prescroll"
-        ><code>&lt;roving-tabindex selector="button, a" direction="horziontal"&gt;
+        ><code>&lt;roving-tabindex selector="button, a" direction="horizontal"&gt;
     &lt;ul class="menu" role="toolbar" aria-label="toolbar-example"&gt;
         &lt;li&gt;&lt;button&gt;One&lt;/button&gt;&lt;/li&gt;
         &lt;li&gt;&lt;button&gt;Two&lt;/button&gt;&lt;/li&gt;
