Skip disabled elements

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     &lt;/ul&gt;
 &lt;/roving-tabindex&gt;</code></pre>
 
+      <p>(Note: these docs are out of date pending a rewrite)</p>
+
       <h2 id="usage"><a href="#usage">Usage</a></h2>
 
       <p>
